--- a/BrickBreaker/bbStyles.css
+++ b/BrickBreaker/bbStyles.css
@@ -9,3 +9,20 @@
 	display: block;
 	margin: :0 auto;
 }
+
+#start, #pause{
+  	font-size: 21px;
+  	line-height: 30px;
+  	width: 200px;
+  	display:inline-block;
+}
+
+.complexity{
+	width: 30px;
+	justify-content: center;
+}
+
+label{
+	font-size: 21px;
+}
+
