--- a/BrickBreaker/bbStyles.css
+++ b/BrickBreaker/bbStyles.css
@@ -1,3 +1,4 @@
+
 *{
 	padding: 0;
 	margin: 0;
@@ -26,3 +27,33 @@ label{
 	font-size: 21px;
 }
 
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  font-size: 12px;
+  padding: 12px 14px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #4CAF50;
+}
