--- a/Checkers/chkStyles.css
+++ b/Checkers/chkStyles.css
@@ -16,6 +16,11 @@ ul {
 
 li {
   float: left;
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 li a {
@@ -34,4 +39,41 @@ li a:hover {
 
 .active {
   background-color: #4CAF50;
+}
+
+
+.checkersB { 
+        width: 400px; 
+        height: 400px; 
+        margin: 1px; 
+        border: 3px solid #F44336; 
+    } 
+ 
+    .red, .yellow { 
+        float: left; 
+        width: 50px; 
+        height: 50px; 
+        font-size:40px; 
+        text-align:center; 
+        display: table-cell; 
+        vertical-align:middle; 
+        box-sizing: border-box; 
+    } 
+ 
+    .red { 
+        background-color: #F44336; 
+    } 
+ 
+    .yellow { 
+        background-color: #FFEB3B; 
+    }
+
+.disable-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 }
