--- a/BrickBreaker/bbStyles.css
+++ b/BrickBreaker/bbStyles.css
@@ -5,6 +5,14 @@
 	
 }
 
+ul {
+  text-align: center;
+  font-family: "Roboto", monospace;
+  margin-right:auto;
+  margin-left: auto;
+  width: 396px;
+}
+
 #BBcanvas {
 	background: #eee;
 	display: block;
@@ -38,6 +46,11 @@ ul {
 
 li {
   float: left;
+  border-right: 1px solid #bbb;
+}
+
+li:last-child {
+  border-right: none;
 }
 
 li a {
