--- a/indexStyles.css
+++ b/indexStyles.css
@@ -1,3 +1,9 @@
+*{
+	padding: 0;
+	margin: 0;
+	
+}
+
 body {
   text-align: center;
   font-family: "Roboto", monospace;
@@ -5,6 +11,12 @@ body {
   margin-left: auto;
   width: 396px;
 }
+
+
+
+
+
+
 
 ul {
   list-style-type: none;
