--- a/Checkers/chkStyles.css
+++ b/Checkers/chkStyles.css
@@ -57,7 +57,32 @@ body {
 }
 
 
+.score {
+  display:inline-block;
+  width: 30%;
+  text-align: center;
+}
 
+
+h2 {
+  margin: 0 auto;
+  font-size: 15px;
+  font-weight: lighter;
+  color: red;
+}
+
+h3 {
+  margin: 0 auto;
+  font-weight: lighter;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+h4 {
+  margin: 0 auto;
+  font-weight: bolder;
+  font-size: 20px;
+}
 
 
 
