--- a/indexStyles.css
+++ b/indexStyles.css
@@ -12,8 +12,67 @@ body {
   width: 396px;
 }
 
+  button.button#bb
+  {
+    width:125px;
+    height:125px;
+  cursor: pointer;
+  }  
+
+  button.button#chk
+  {
+    width:125px;
+    height:125px;
+  cursor: pointer;
+  }
+
+  button.button#ttt
+  {
+    width:125px;
+    height:125px;
+  cursor: pointer;
+  }
 
 
+/* Container needed to position the button. Adjust the width as needed */
+.container {
+  position: relative;
+  width: 50%;
+}
+
+/* Make the image responsive */
+.container img {
+  width: 100%;
+  height: auto;
+}
+
+/* Style the button and place it in the middle of the container/image */
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.container .btn:hover {
+  background-color: black;
+}
+
+.footer{
+  font-family: "Roboto", monospace;
+  margin: 0 auto;
+  font-size: 15x;
+  font-weight: lighter;
+  color: blue;
+}
 
 
 
