--- a/indexStyles.css
+++ b/indexStyles.css
@@ -12,7 +12,27 @@ body {
   width: 396px;
 }
 
+div {
+  text-align: center;
+  font-family: "Roboto", monospace;
+  margin-right:auto;
+  margin-left: auto;
+  width: 396px;
+}
 
+h1 {
+  margin: 0 auto;
+  font-weight: bolder;
+  font-size: 30px;
+  color: blue;
+}
+
+h2 {
+  margin: 0 auto;
+  font-size: 15px;
+  font-weight: lighter;
+  color: red;
+}
 
 /* Container needed to position the button. Adjust the width as needed */
 .container {
